--- a/CameraControl.Core/packages.config
+++ b/CameraControl.Core/packages.config
@@ -8,6 +8,7 @@
   <package id="Accord.Video" version="3.8.2-alpha" targetFramework="net46" />
   <package id="Accord.Vision" version="3.8.2-alpha" targetFramework="net46" />
   <package id="AvalonEdit" version="6.0.0" targetFramework="net46" />
+  <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net46" />
   <package id="DotNetZip" version="1.13.4" targetFramework="net46" />
   <package id="Eagle" version="1.0.7213.50727" targetFramework="net46" />
   <package id="Eagle.CLRv4" version="1.0.7213.50727" targetFramework="net46" />
@@ -26,5 +27,6 @@
   <package id="MeasurementProtocolClient" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net46" />
   <package id="sqlite-net" version="1.0.8" targetFramework="net46" />
+  <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net46" />
   <package id="WriteableBitmapEx" version="1.6.3" targetFramework="net46" />
 </packages>
