--- a/CameraControl.Devices/packages.config
+++ b/CameraControl.Devices/packages.config
@@ -3,7 +3,9 @@
   <package id="Accord" version="3.8.2-alpha" targetFramework="net46" />
   <package id="Accord.Video" version="3.8.2-alpha" targetFramework="net46" />
   <package id="Accord.Video.DirectShow" version="3.8.2-alpha" targetFramework="net46" />
+  <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net46" />
   <package id="Rssdp" version="2.0.9" targetFramework="net46" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net46" />
+  <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net46" />
 </packages>
