--- a/CameraControl.PluginManager/packages.config
+++ b/CameraControl.PluginManager/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="DotNetZip" version="1.13.4" targetFramework="net46" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.4.0-alpha" targetFramework="net46" />
+  <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net46" />
 </packages>
