--- a/CameraControl.Plugins/packages.config
+++ b/CameraControl.Plugins/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="6.0.0" targetFramework="net46" />
+  <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="DotNetZip" version="1.13.4" targetFramework="net46" />
   <package id="DropNet" version="1.10.23.0" targetFramework="net40" />
@@ -20,6 +21,7 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net46" />
   <package id="RestSharp" version="105.2.3" targetFramework="net45" requireReinstallation="True" />
   <package id="System.Net.FtpClient" version="1.0.5824.34026" targetFramework="net45" />
+  <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net46" />
   <package id="WriteableBitmapEx" version="1.6.3" targetFramework="net46" />
   <package id="ZXing.Net" version="0.16.5" targetFramework="net46" />
 </packages>
