--- a/CameraControl/app.config
+++ b/CameraControl/app.config
@@ -1,37 +1,72 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup useLegacyV2RuntimeActivationPolicy="true">
-  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
-</startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="AForge" publicKeyToken="c1db6ff4eaa06aeb" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
+        <assemblyIdentity name="AForge" publicKeyToken="c1db6ff4eaa06aeb" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="AForge.Math" publicKeyToken="abba2e25397ee8c9" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
+        <assemblyIdentity name="AForge.Math" publicKeyToken="abba2e25397ee8c9" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="AForge.Imaging" publicKeyToken="ba8ddea9676ca48b" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0"/>
+        <assemblyIdentity name="AForge.Imaging" publicKeyToken="ba8ddea9676ca48b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0"/>
+        <assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="GoogleAnalyticsTracker.Core" publicKeyToken="04ab204e84b117c0" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0"/>
+        <assemblyIdentity name="GoogleAnalyticsTracker.Core" publicKeyToken="04ab204e84b117c0" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+        <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Cells" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-20.1.0.0" newVersion="20.1.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Diagram" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-20.2.0.0" newVersion="20.2.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Email" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-20.1.0.0" newVersion="20.1.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Imaging" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.7.0.0" newVersion="18.7.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.PDF" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-20.1.0.0" newVersion="20.1.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Slides" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-20.1.0.0" newVersion="20.1.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Words" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-20.2.0.0" newVersion="20.2.0.0" />
+        <publisherPolicy apply="no" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
