--- a/CameraControl/packages.config
+++ b/CameraControl/packages.config
@@ -8,6 +8,7 @@
   <package id="Accord.Video" version="3.8.2-alpha" targetFramework="net46" />
   <package id="Accord.Vision" version="3.8.2-alpha" targetFramework="net46" />
   <package id="AvalonEdit" version="6.0.0" targetFramework="net46" />
+  <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net46" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net46" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
@@ -21,6 +22,7 @@
   <package id="Griffin.Networking" version="0.5.7" targetFramework="net46" />
   <package id="Griffin.Networking.Protocol.Http" version="0.5.2" targetFramework="net46" />
   <package id="Griffin.WebServer" version="0.5.0" targetFramework="net45" />
+  <package id="GroupDocs.Watermark" version="21.3.0" targetFramework="net46" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net46" />
   <package id="ImageLibrary" version="3.0.2" targetFramework="net46" />
   <package id="LibMJPEGServer" version="1.0.2" targetFramework="net46" />
@@ -41,6 +43,7 @@
   <package id="RestSharp" version="105.2.3" targetFramework="net45" requireReinstallation="True" />
   <package id="System.Net.FtpClient" version="1.0.5824.34026" targetFramework="net45" />
   <package id="WebEye.Controls.Wpf.WebCameraControl" version="1.0.1" targetFramework="net46" />
+  <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net46" />
   <package id="WriteableBitmapEx" version="1.6.3" targetFramework="net46" />
   <package id="ZXing.Net" version="0.16.5" targetFramework="net46" />
 </packages>
