--- a/CameraControl/packages.config
+++ b/CameraControl/packages.config
@@ -41,6 +41,8 @@
   <package id="RestSharp" version="105.2.3" targetFramework="net45" requireReinstallation="True" />
   <package id="System.Net.FtpClient" version="1.0.5824.34026" targetFramework="net45" />
   <package id="WebEye.Controls.Wpf.WebCameraControl" version="1.0.1" targetFramework="net46" />
+  <package id="WinFormAnimation" version="1.6.0.4" targetFramework="net46" />
+  <package id="WpfAnimatedGif" version="2.0.0" targetFramework="net46" />
   <package id="WriteableBitmapEx" version="1.6.3" targetFramework="net46" />
   <package id="ZXing.Net" version="0.16.5" targetFramework="net46" />
 </packages>
